[gd_scene load_steps=24 format=2]

[ext_resource path="res://Src/misc/Tutorial.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Font/Silver.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Src/Autoloads/PopupPanel.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/bubble emotes july update.png" type="Texture" id=4]
[ext_resource path="res://Assets/Font/MenuFonts.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Menu/Pressed 29.png" type="Texture" id=6]
[ext_resource path="res://Assets/Menu/Pressed 24.png" type="Texture" id=7]
[ext_resource path="res://Assets/Menu/Idle 24.png" type="Texture" id=8]
[ext_resource path="res://Assets/Menu/Idle 29.png" type="Texture" id=9]
[ext_resource path="res://Assets/Menu/hoverButton.png" type="Texture" id=10]
[ext_resource path="res://Assets/Menu/Idle 22.png" type="Texture" id=11]
[ext_resource path="res://Assets/Menu/inactiveButton.png" type="Texture" id=12]
[ext_resource path="res://Assets/Menu/Pressed 22.png" type="Texture" id=13]
[ext_resource path="res://Assets/Menu/pressedButton.png" type="Texture" id=14]
[ext_resource path="res://Assets/Menu/panel-1.png" type="Texture" id=15]
[ext_resource path="res://Assets/Menu/activeButton.png" type="Texture" id=16]
[ext_resource path="res://Assets/Menu/Pressed 27.png" type="Texture" id=17]
[ext_resource path="res://Assets/Menu/Idle 27.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 16, 128, 16, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 32, 128, 16, 16 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 6.0
} ]

[node name="HUD" type="CanvasLayer"]
pause_mode = 2
layer = 2

[node name="PopupPanel" type="Popup" parent="."]
pause_mode = 2
visible = true
anchor_left = 0.5
anchor_top = 0.498234
anchor_right = 0.5
anchor_bottom = 0.498234
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1024, 600 )
focus_mode = 2
mouse_filter = 2
popup_exclusive = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="PopupPanel"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -300.0
margin_right = 256.0
margin_bottom = 300.0
rect_min_size = Vector2( 512, 600 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/TextureRect"]
pause_mode = 2
margin_top = 80.0
margin_right = 512.0
margin_bottom = 680.0
rect_min_size = Vector2( 512, 458 )
focus_mode = 2
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer"]
pause_mode = 2
margin_right = 512.0
margin_bottom = 150.0
rect_min_size = Vector2( 512, 150 )
rect_clip_content = false
mouse_filter = 2
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[wave amp=50 freq=2][center]Game Over[/center][/wave]"
meta_underlined = false
tab_size = 2
text = "Game Over"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopButtons" type="Control" parent="PopupPanel/TextureRect/VBoxContainer"]
pause_mode = 1
margin_top = 154.0
margin_right = 512.0
margin_bottom = 202.0
rect_min_size = Vector2( 512, 48 )
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -24.0
margin_bottom = 24.0
rect_min_size = Vector2( 512, 48 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer"]
pause_mode = 2
margin_right = 512.0
margin_bottom = 48.0
rect_min_size = Vector2( 256, 48 )
focus_mode = 2
size_flags_vertical = 0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer"]
pause_mode = 2
modulate = Color( 0.345098, 0.270588, 0.388235, 1 )
margin_left = 154.0
margin_right = 202.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 17 )
expand = true

[node name="SettingsButton" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer"]
pause_mode = 2
modulate = Color( 0.345098, 0.270588, 0.388235, 1 )
margin_left = 206.0
margin_right = 254.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 6 )
expand = true

[node name="Other" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer"]
pause_mode = 2
modulate = Color( 0.345098, 0.270588, 0.388235, 1 )
margin_left = 258.0
margin_right = 306.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
expand = true

[node name="HighScores" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer"]
modulate = Color( 0.345098, 0.270588, 0.388235, 1 )
margin_left = 310.0
margin_right = 358.0
margin_bottom = 48.0
rect_min_size = Vector2( 48, 48 )
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 13 )
expand = true

[node name="H" type="AnimatedSprite" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer"]
visible = false
show_behind_parent = true
position = Vector2( 333.338, -11.3097 )
scale = Vector2( 2, 2 )
frames = SubResource( 5 )
playing = true

[node name="Label" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer/H"]
modulate = Color( 1, 0.960784, 0, 1 )
margin_left = 8.41849
margin_top = -22.4492
margin_right = 139.418
margin_bottom = 14.5508
rect_rotation = -13.0068
custom_fonts/font = ExtResource( 5 )
text = "New Highscore!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="PopupPanel/TextureRect/VBoxContainer"]
pause_mode = 2
margin_top = 206.0
margin_right = 512.0
margin_bottom = 406.0
rect_min_size = Vector2( 512, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel/TextureRect/VBoxContainer/Menu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 40.0
margin_right = 125.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer"]
margin_right = 250.0
margin_bottom = 170.0
custom_constants/separation = 10
alignment = 1

[node name="NextLevel" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Next" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/NextLevel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
rect_min_size = Vector2( 188, 40 )
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.941176, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Next Level[/center]"
text = "Next Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retry" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 60.0
margin_right = 250.0
margin_bottom = 110.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="RetryCurrentLevel" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/Retry"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Retry Current Level[/center]"
text = "Retry Current Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 120.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="LevelScreen" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/Level"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Level Screen[/center]"
text = "Level Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 120.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="QuitGame" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/Quit"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Quit Game[/center]"
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Control" parent="PopupPanel/TextureRect/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 190.0
margin_right = 512.0
margin_bottom = 390.0
rect_min_size = Vector2( 512, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel/TextureRect/VBoxContainer/Settings"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 40.0
margin_right = 125.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer"]
margin_right = 250.0
margin_bottom = 170.0
custom_constants/separation = 10

[node name="Sound" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Text" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer/Sound"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Retry Current Level[/center]"
text = "Retry Current Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 60.0
margin_right = 250.0
margin_bottom = 110.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Text" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer/Music"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Level Screen[/center]"
text = "Level Screen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 120.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 50 )
hint_tooltip = "Coming soon!"
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Text" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer/Fullscreen"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Quit Game[/center]"
text = "Quit Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Other" type="Control" parent="PopupPanel/TextureRect/VBoxContainer"]
pause_mode = 2
visible = false
margin_top = 206.0
margin_right = 512.0
margin_bottom = 406.0
rect_min_size = Vector2( 512, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel/TextureRect/VBoxContainer/Other"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -125.0
margin_top = 40.0
margin_right = 125.0
margin_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Other/MarginContainer"]
margin_right = 250.0
margin_bottom = 170.0
custom_constants/separation = 10

[node name="Achievements" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Other/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_right = 250.0
margin_bottom = 50.0
rect_min_size = Vector2( 250, 50 )
hint_tooltip = "Coming soon!"
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Text" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Other/MarginContainer/VBoxContainer/Achievements"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Achievements[/center]"
text = "Achievements"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sandbox" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Other/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 60.0
margin_right = 250.0
margin_bottom = 110.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Text" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Other/MarginContainer/VBoxContainer/Sandbox"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Sandbox Mode[/center]"
text = "Sandbox Mode"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="PopupPanel/TextureRect/VBoxContainer/Other/MarginContainer/VBoxContainer"]
pause_mode = 2
margin_top = 120.0
margin_right = 250.0
margin_bottom = 170.0
rect_min_size = Vector2( 250, 50 )
size_flags_horizontal = 0
size_flags_vertical = 0
disabled = true
action_mode = 0
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_hover = ExtResource( 10 )
texture_disabled = ExtResource( 12 )
expand = true

[node name="Text" type="RichTextLabel" parent="PopupPanel/TextureRect/VBoxContainer/Other/MarginContainer/VBoxContainer/Credits"]
pause_mode = 2
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.0
margin_top = -20.0
margin_right = 94.0
margin_bottom = 20.0
mouse_filter = 1
custom_fonts/normal_font = ExtResource( 5 )
custom_colors/default_color = Color( 1, 0.960784, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Credits[/center]"
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Highscores" type="Control" parent="PopupPanel/TextureRect/VBoxContainer"]
visible = false
margin_top = 206.0
margin_right = 512.0
margin_bottom = 456.0
rect_min_size = Vector2( 512, 250 )

[node name="MarginContainer" type="MarginContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -105.0
margin_right = 256.0
margin_bottom = 145.0
rect_min_size = Vector2( 512, 250 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer"]
margin_right = 512.0
margin_bottom = 250.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer"]
margin_left = 128.0
margin_right = 384.0
margin_bottom = 250.0
rect_min_size = Vector2( 256, 86 )

[node name="HBoxContainer" type="HBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 37.0

[node name="position" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 10.0
margin_bottom = 37.0
rect_min_size = Vector2( 10, 37 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "1"

[node name="VSeparator" type="VSeparator" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 14.0
margin_right = 51.0
margin_bottom = 37.0
rect_min_size = Vector2( 37, 37 )

[node name="score" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 55.0
margin_right = 55.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )

[node name="HBoxContainer2" type="HBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 256.0
margin_bottom = 78.0

[node name="position" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 10.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "2"

[node name="VSeparator" type="VSeparator" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 14.0
margin_right = 51.0
margin_bottom = 37.0
rect_min_size = Vector2( 37, 37 )

[node name="score" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 55.0
margin_right = 55.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )

[node name="HBoxContainer3" type="HBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 256.0
margin_bottom = 119.0

[node name="position" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_right = 10.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "3"

[node name="VSeparator" type="VSeparator" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 14.0
margin_right = 51.0
margin_bottom = 37.0
rect_min_size = Vector2( 37, 37 )

[node name="score" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer3"]
margin_left = 55.0
margin_right = 55.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )

[node name="HBoxContainer4" type="HBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 123.0
margin_right = 256.0
margin_bottom = 160.0

[node name="position" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_right = 10.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "4"

[node name="VSeparator" type="VSeparator" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 14.0
margin_right = 51.0
margin_bottom = 37.0
rect_min_size = Vector2( 37, 37 )

[node name="score" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer4"]
margin_left = 55.0
margin_right = 55.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )

[node name="HBoxContainer5" type="HBoxContainer" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 164.0
margin_right = 256.0
margin_bottom = 201.0

[node name="position" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
margin_right = 10.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )
text = "5"

[node name="VSeparator" type="VSeparator" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
margin_left = 14.0
margin_right = 51.0
margin_bottom = 37.0
rect_min_size = Vector2( 37, 37 )

[node name="score" type="Label" parent="PopupPanel/TextureRect/VBoxContainer/Highscores/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer5"]
margin_left = 55.0
margin_right = 55.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 0.960784, 0, 1 )

[node name="Tutorial" parent="." instance=ExtResource( 1 )]
pause_mode = 2
margin_right = -724.0
margin_bottom = -450.0
rect_min_size = Vector2( 300, 150 )
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer/BackButton" to="PopupPanel" method="_on_BackButton_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer/SettingsButton" to="PopupPanel" method="_on_SettingsButton_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer/Other" to="PopupPanel" method="_on_Other_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/TopButtons/MarginContainer/HBoxContainer/HighScores" to="PopupPanel" method="_on_HighScores_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/NextLevel" to="PopupPanel" method="_on_NextLevel_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/Retry" to="PopupPanel" method="_on_Button_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/Level" to="PopupPanel" method="_on_Button2_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/Menu/MarginContainer/VBoxContainer/Quit" to="PopupPanel" method="_on_Button3_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer/Sound" to="PopupPanel" method="_on_Sound_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer/Music" to="PopupPanel" method="_on_Music_button_up"]
[connection signal="button_up" from="PopupPanel/TextureRect/VBoxContainer/Settings/MarginContainer/VBoxContainer/Fullscreen" to="PopupPanel" method="_on_Fullscreen_button_up"]
